# MCP_Multi_Agent_System

./: .gitignore  README.md  client.py  papers_server.py  pyproject.toml  requirements.txt  weather.py  websearch_server.py
